# start-cpp-vcpkg

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap-ubuntu.sh  bootstrap-unix.sh  bootstrap-win.bat  bootstrap-windows.bat  build-linux.sh  build-mac.sh  build-ubuntu.sh  build-win.bat  vcpkg.json
docs/: choose-a-license.drawio
sample-datacenter/: CMakeLists.txt  SampleDataCenter.cpp  SampleDataCenter.h
sample-db/: CMakeLists.txt  SampleDB.cpp  SampleDB.h
sample-db-test/: CMakeLists.txt  SampleDBTest.cpp
sample-db-test/mysql/: MySQLClientTest.cpp
sample-db-test/redis/: RedisClientTest.cpp
sample-db/mysql/: MySQLClient.cpp  MySQLClient.h  MySQLClient_p.h
sample-db/redis/: RedisClient.cpp  RedisClient.h  RedisClient_p.h  RedisCommon.h
sample-dynamic-lib/: CMakeLists.txt  SampleDynamicLib.cpp  SampleDynamicLib.h  define.h
sample-main/: CMakeLists.txt  main.cpp
sample-main-imgui/: CMakeLists.txt  main.cpp
sample-net/: CMakeLists.txt  http_client.h  http_server.h  net_common.h  net_states.h  tcp_client.h  tcp_server.h
sample-net/impl/: boost_http_parser.h  curl_http_client.h  libuv_event_loop.h  libuv_tcp_client_impl.h  libuv_tcp_server_impl.h
sample-net/interface/: http_interface.h  tcp_interface.h
sample-net/sample/: sample_net.cpp
sample-pb/: .gitignore  CMakeLists.txt  PBToJson.h  SamplePB.cpp  SamplePB.h  echo-dir.bat  general-cpp.bat
sample-pb/pb/: MsgType.proto  Req.proto  Res.proto
sample-pb/pb/common/: Stock.proto
sample-pb/pb/notify/: QuotePushTickNotify.proto
sample-pb/pb/req/: HeartbeatReq.proto  QuoteSubscribeTickReq.proto  QuoteUnsubscribeTickReq.proto
sample-pb/pb/res/: HeartbeatRes.proto  QuoteSubscribeTickRes.proto  QuoteUnsubscribeTickRes.proto
sample-pb/pb_cpp/: MsgType.pb.cc  MsgType.pb.h  Req.pb.cc  Req.pb.h  Res.pb.cc  Res.pb.h
sample-pb/pb_cpp/common/: Stock.pb.cc  Stock.pb.h
sample-pb/pb_cpp/notify/: QuotePushTickNotify.pb.cc  QuotePushTickNotify.pb.h
sample-pb/pb_cpp/req/: HeartbeatReq.pb.cc  HeartbeatReq.pb.h  QuoteSubscribeTickReq.pb.cc  QuoteSubscribeTickReq.pb.h  QuoteUnsubscribeTickReq.pb.cc  QuoteUnsubscribeTickReq.pb.h
sample-pb/pb_cpp/res/: HeartbeatRes.pb.cc  HeartbeatRes.pb.h  QuoteSubscribeTickRes.pb.cc  QuoteSubscribeTickRes.pb.h  QuoteUnsubscribeTickRes.pb.cc  QuoteUnsubscribeTickRes.pb.h
sample-pb/protoc-win64/: readme.txt
sample-tools/: CMakeLists.txt  Chrono.h  benchmark.h  c_def.h  chrono.h  common.h  cpp_def.h  cpp_version.h  hardware.h  log.h  platform.h
sample-tools/impl/: boost_threadpool_impl.h  compression_impl.h  cryptopp_impl.h  progschj-ThreadPool.h  snappy_impl.h  stl_threadpool_impl.h  stl_threadtimer_impl.h  zlib_impl.h
sample-tools/interface/: compression_interface.h  crypto_interface.h  threadpool_interface.h  threadtimer_interface.h
sample-tools/sample/: sample_tools.cpp
src/sample-datacenter/: CMakeLists.txt  SampleDataCenter.cpp  SampleDataCenter.h
src/sample-db/: CMakeLists.txt  SampleDB.cpp  SampleDB.h
src/sample-db/mysql/: MySQLClient.cpp  MySQLClient.h  MySQLClient_p.h
src/sample-db/redis/: RedisClient.cpp  RedisClient.h  RedisClient_p.h  RedisCommon.h
src/sample-dynamic-lib/: CMakeLists.txt  SampleDynamicLib.cpp  SampleDynamicLib.h  define.h
src/sample-main/: CMakeLists.txt  main.cpp  main.h
src/sample-net/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  SampleNet.cpp  SampleNet.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  http_client.h  http_interface.h  http_server.h  net_common.h  tcp_client.h  tcp_interface.h  tcp_server.h
src/sample-net/doc/: states.drawio
src/sample-net/http/: HttpClient.cpp  HttpClient.h  HttpClient_p.h  HttpCommon.h
src/sample-net/impl/: HttpClient_p.h  boost_http_parser.h  boost_http_request.h  curl_http_client.h  libuv_event_loop.h  libuv_tcp_server_impl.h
src/sample-net/interface/: http_interface.h  tcp_interface.h
src/sample-net/sample/: SampleNet.cpp  sample_net.cpp
src/sample-net/tcp/: EventLoop.h  TcpClient.cpp  TcpClient.h  TcpClient_p.h  TcpCommon.h  TcpServer.cpp  TcpServer.h  TcpServer_p.h  tcp_client.h  tcp_interface.h  tcp_package.h  tcp_proto.h  tcp_server.h
src/sample-net/tcp/impl/: libuv_event_loop.cpp  libuv_event_loop.h  libuv_tcp_client_impl.cpp  libuv_tcp_client_impl.h  libuv_tcp_server_impl.cpp  libuv_tcp_server_impl.h
src/sample-pb/: CMakeLists.txt  SamplePB.cpp  SamplePB.h  general-cpp.bat
src/sample-pb/pb/: Req.proto  Res.proto  echo_dir.bat
src/sample-pb/pb/common/: Stock.proto
src/sample-pb/pb/notify/: QuotePushTickNotify.proto
src/sample-pb/pb/req/: QuoteSubscribeTickReq.proto  QuoteUnsubscribeTickReq.proto
src/sample-pb/pb_cpp/: MsgType.pb.cc  MsgType.pb.h  Req.pb.cc  Req.pb.h  Res.pb.cc  Res.pb.h
src/sample-pb/pb_cpp/common/: Stock.pb.h
src/sample-pb/pb_cpp/notify/: QuotePushTickNotify.pb.cc  QuotePushTickNotify.pb.h
src/sample-tools/: CMakeLists.txt  Chrono.h  Common.h  Crypto.h  SampleTools.cpp  SampleTools.h
src/sample-tools/crypto/: Crypto.cpp  Crypto.h
src/sample-tools/example/: Example.cpp  Example.h
src/sample-tools/impl/: boost_threadpool_impl.h  cryptopp_impl.h  stl_threadpool_impl.h  stl_threadtimer_impl.h
src/sample-tools/interface/: crypto_interface.h
src/sample-tools/sample/: sample_tools.cpp
src/sample-tools/thread/: threadpool_interface.h  threadtimer_interface.h
test/sample-db-test/: CMakeLists.txt  SampleDBTest.cpp
test/sample-db-test/mysql/: MySQLClientTest.cpp
test/sample-db-test/redis/: RedisClientTest.cpp
test/sample-net-test/: CMakeLists.txt  HttpTest.cpp  SampleNetTest.cpp  TcpTest.cpp  http_client_test.cpp  http_server_test.cpp  tcp_test.cpp
test/sample-net-test/http/: HttpTest.cpp
test/sample-net-test/tcp/: TcpTest.cpp  tcp_test.cpp
test/sample-tools-test/: CMakeLists.txt  CryptoTest.cpp  SampleToolsTest.cpp  boost_threadpool_test.cpp  json_test.cpp  threadpool_test.cpp  threadtimer_test.cpp
test/sample-tools-test/crypto/: CryptoTest.cpp
test/sample-tools-test/example/: Example.h  Example_p.h
test/sample-tools-test/thread/: threadpool_test.cpp  threadtimer_test.cpp
(+40 files in other folders)
